--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.14.1",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0"
   },
   "devDependencies": {
     "@types/node": "^20",
